# kapsaro

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  README_ja.md  REFACTORING_PLAN.md  SECURITY.md  install.sh  rust-toolchain.toml
crates/kapsaro-core/: Cargo.toml
crates/kapsaro-core/schemas/: kapsaro_artifact_signature_schema.json  kapsaro_common_schema.json  kapsaro_file_enc_schema.json  kapsaro_kv_enc_schema.json  kapsaro_local_trust_schema.json  kapsaro_private_key_schema.json  kapsaro_public_key_schema.json
crates/kapsaro-core/src/: cli_api.rs  config.rs  crypto.rs  error.rs  feature.rs  io.rs  lib.rs  model.rs
crates/kapsaro-core/src/api/: artifact_text.rs  file.rs  key.rs  kv.rs  online.rs  operation.rs  secret.rs  trust.rs
crates/kapsaro-core/src/app/: context.rs  doctor.rs  errors.rs  file.rs  key.rs  kv.rs  member.rs  registration.rs  rewrap.rs
crates/kapsaro-core/src/app/context/: crypto.rs  env_key.rs  execution.rs  identity.rs  member.rs  options.rs  review.rs  ssh.rs
crates/kapsaro-core/src/app/doctor/: artifacts.rs  ci.rs  local_state.rs  members.rs  types.rs  workspace.rs
crates/kapsaro-core/src/app/file/: decrypt.rs  encrypt.rs  inspect.rs
crates/kapsaro-core/src/app/key/: export.rs  generate.rs  manage.rs  timestamp.rs  types.rs
crates/kapsaro-core/src/app/kv/: mutation.rs  query.rs  types.rs
crates/kapsaro-core/src/app/member/: approval.rs  query.rs
crates/kapsaro-core/src/app/registration/: command.rs  types.rs  workspace.rs
crates/kapsaro-core/src/app/rewrap/: artifact.rs  execution.rs  plan.rs  promotion.rs  rewrite.rs  session.rs  trust.rs
crates/kapsaro-core/src/app/trust/: enforcement.rs  evaluation.rs  management.rs  outcome.rs  policy.rs  recovery.rs  review.rs  store.rs  types.rs
crates/kapsaro-core/src/cli_api/: app.rs  test_support.rs
crates/kapsaro-core/src/config/: resolution.rs  types.rs
crates/kapsaro-core/src/config/resolution/: allow_expired_key.rs  allow_non_member.rs  common.rs  github_user.rs  global.rs  member_handle.rs  ssh_key.rs  ssh_signing_method.rs  strict_key_checking.rs  workspace.rs
crates/kapsaro-core/src/crypto/: hmac.rs  kdf.rs  kem.rs  rng.rs  sign.rs  types.rs
crates/kapsaro-core/src/crypto/aead/: xchacha.rs
crates/kapsaro-core/src/crypto/types/: data.rs  keys.rs  primitives.rs
crates/kapsaro-core/src/feature/: artifact.rs  disclosure.rs  encrypt.rs  envelope.rs  inspect.rs  kv.rs  member.rs  recipient.rs  rewrap.rs
crates/kapsaro-core/src/feature/context/: crypto.rs  env_key.rs  expiry.rs
crates/kapsaro-core/src/feature/decrypt/: file.rs
crates/kapsaro-core/src/feature/encrypt/: file.rs
crates/kapsaro-core/src/feature/envelope/: binding.rs  cek.rs  key_schedule.rs  unwrap.rs  wrap.rs  wrap_set.rs
crates/kapsaro-core/src/feature/inspect/: file.rs  formatter.rs  kv.rs  verification.rs
crates/kapsaro-core/src/feature/key/: generate.rs  material.rs  portable_export.rs  public_key_document.rs  types.rs
crates/kapsaro-core/src/feature/kv/: decrypt.rs  encrypt.rs  entry_codec.rs  error.rs  (+4 more)
crates/kapsaro-core/src/format/: codec.rs  detection.rs  error.rs  file.rs  jcs.rs  kid.rs  kv.rs  public_key.rs  signature.rs  token.rs  trust_store.rs
crates/kapsaro-core/src/io/: config.rs  document_store.rs  github.rs  keystore.rs  process.rs  verify_online.rs
crates/kapsaro-core/src/model/: common.rs  file_enc.rs  identity.rs  private_key.rs  public_key.rs  signature.rs  trust_store.rs  verified.rs  wire.rs
crates/kapsaro-core/src/support/: display.rs  fs.rs  kid.rs  limits.rs  path.rs  secret.rs  time.rs  validation.rs  warning.rs
crates/kapsaro-core/tests/: public_api.rs  unit.rs
crates/kapsaro-core/tests/test_support/: app_context.rs  constants.rs  context_execution.rs  context_options.rs  context_paths.rs  crypto_context.rs  ed25519_backend.rs  fixture.rs  keygen_helpers.rs  mod.rs  ssh_stubs.rs
crates/kapsaro-test-support/: Cargo.toml
crates/kapsaro-test-support/src/: constants.rs  context_options.rs  crypto_context.rs  ed25519_backend.rs  fixture.rs  keygen_helpers.rs  lib.rs
crates/kapsaro-test-support/tests/: ed25519_backend_test.rs
crates/secretenv-core/: Cargo.toml
crates/secretenv-core/schemas/: secretenv_artifact_signature_schema.json  secretenv_common_schema.json  secretenv_file_enc_schema.json  secretenv_kv_enc_schema.json  secretenv_local_trust_schema.json  secretenv_private_key_schema.json  secretenv_public_key_schema.json  secretenv_schema.json  secretenv_trust_local_schema.json
crates/secretenv-core/src/: app.rs  cli_api.rs  crypto.rs  error.rs  feature.rs  format.rs  lib.rs  model.rs  prelude.rs  support.rs
crates/secretenv-core/src/api/: artifact_text.rs  file.rs  home.rs  key.rs  kv.rs  mod.rs  online.rs  operation.rs  secret.rs  ssh.rs  trust.rs
crates/secretenv-core/src/app/: artifact.rs  config.rs  doctor.rs  errors.rs  key.rs  run.rs  trust.rs  verification.rs
crates/secretenv-core/src/cli_api/: app.rs  presentation.rs  test_support.rs
crates/secretenv-core/src/config/: resolution.rs  types.rs
crates/secretenv-core/src/crypto/: kdf.rs  kem.rs  sign.rs  types.rs
crates/secretenv-core/src/feature/: config.rs  context.rs  encrypt.rs  envelope.rs  inspect.rs  key.rs  kv.rs  recipient.rs  rewrap.rs  trust.rs  verify.rs
crates/secretenv-core/src/format/: content.rs  detection.rs  error.rs  kid.rs  kv.rs  public_key.rs  signature.rs  wrap.rs
crates/secretenv-core/src/io/: config.rs  document_store.rs  process.rs  verify_online.rs
crates/secretenv-core/src/model/: common.rs  file_enc.rs  kv_enc.rs  private_key.rs  public_key.rs  public_key_verified.rs  signature.rs  trust_store.rs  verification.rs  verified.rs  wire.rs
crates/secretenv-core/src/support/: codec.rs  json_limits.rs  runtime.rs  secret.rs  tty.rs  validation.rs  warning.rs
crates/secretenv-core/tests/: public_api.rs  public_api_compile_fail.rs  unit.rs
crates/secretenv-core/tests/test_support/: app_context.rs  context_execution.rs  context_options.rs  context_paths.rs  crypto_context.rs  ed25519_backend.rs  fixture.rs  keygen_helpers.rs  mod.rs  ssh_stubs.rs
(+1255 files in other folders)
