[package]
name = "secretenv"
version = "0.8.1-alpha"
edition = "2021"
authors = ["Satoshi Ebisawa <ebisawa@gmail.com>"]
description = "Offline-first CLI for sharing encrypted .env files and other secrets through Git"
license = "Apache-2.0"
autotests = false

[workspace]
members = ["crates/secretenv-core"]

[dependencies]
secretenv-core = { version = "0.8.1-alpha", path = "crates/secretenv-core", features = ["cli-internal"] }

# CLI framework
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Cryptography - Ed25519 signatures
ed25519-dalek = "2"

# Secure memory handling
zeroize = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["online"]
online = ["secretenv-core/online"]

[dev-dependencies]
secretenv-core = { version = "0.8.1-alpha", path = "crates/secretenv-core", features = ["cli-internal", "cli-test-support"] }

# CLI testing
assert_cmd = "2"
predicates = "3"
libc = "0.2"
tempfile = "3"

# Serial test execution
serial_test = "3"

# Environment variable manipulation for tests
temp-env = "0.3"
ed25519-dalek = "2"
hex = "0.4"
hkdf = "0.13"
http = "1"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
